--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -10,6 +10,32 @@
     <!-- Include the script that builds the page and powers Netlify CMS -->
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
     <script>
+      var PostPreview = createClass({
+        render: function() {
+          var entry = this.props.entry
+          var image = entry.getIn(['data', 'image'])
+          var bg = image && this.props.getMedia(image)
+          return h(
+            'div',
+            {},
+            h(
+              'div',
+              { className: 'cover' },
+              h('h1', {}, entry.getIn(['data', 'title'])),
+              bg ? h('img', { src: bg.toString() }) : null
+            ),
+            h(
+              'p',
+              {},
+              h('small', {}, 'Written ' + entry.getIn(['data', 'date']))
+            ),
+            h('div', { className: 'text' }, this.props.widgetFor('body'))
+          )
+        },
+      })
+      CMS.registerPreviewTemplate('posts', PostPreview)
+    </script>
+    <script>
       CMS.registerPreviewStyle('/example.css')
     </script>
   </body>
